--- a/page/tabBar/homePages/attendanceCard/attendanceCard.wxml
+++ b/page/tabBar/homePages/attendanceCard/attendanceCard.wxml
@@ -11,17 +11,17 @@
 
     <view>
       <view class='list'>早打卡时间：未打卡</view>
-      <view class='list'>打卡人：芭乐</view>
+      <view class='list'>打卡人：{{userName}}</view>
     </view>
 
    <view class='margin_top'>
       <view class='list'>午打卡时间：未打卡</view>
-      <view class='list'>打卡人：芭乐</view>
+      <view class='list'>打卡人：{{userName}}</view>
    </view>
 
     <view class='margin_top'>
       <view class='list'>午打卡时间：未打卡</view>
-      <view class='list'>打卡人：芭乐</view>
+      <view class='list'>打卡人：{{userName}}</view>
    </view>
    
   </view>
