--- a/page/tabBar/homePages/attendanceProject/attendanceProject.wxss
+++ b/page/tabBar/homePages/attendanceProject/attendanceProject.wxss
@@ -8,9 +8,10 @@
 }
 .header_title{
   display: flex;
+  flex-wrap: wrap;
 }
 .header_title>view{
-  width: 25%;
+  width: 33.3%;
   display: flex;
   justify-content: center;
   align-items: center;
