--- a/page/tabBar/homePages/stayAttendance/stayAttendance.wxml
+++ b/page/tabBar/homePages/stayAttendance/stayAttendance.wxml
@@ -3,119 +3,92 @@
   <view class='headers display_flex bg_fff'>
   
     <view class='left_box' catchtap='myWage'>
-      <text class='{{headerBorder? "addBorder" : "" }}'>我的工资</text>
+      <text class='{{headerBorder? "addBorder" : "" }}'>我的考勤</text>
       <view class='news_box {{headerBorder? "addBorder" : "" }}'>
         <view class='news'>3</view>
       </view>
     </view>
     <view class='center_border'></view>
     <view class='right_box' bindtap='youWage'>
-      <text class='{{!headerBorder? "addBorder" : "" }}'>班组工资</text>
+      <text class='{{!headerBorder? "addBorder" : "" }}'>班组考勤</text>
       <view class='news_box {{!headerBorder? "addBorder" : "" }}'>
         <view class='news'>3</view>
       </view>
     </view>
     
   </view>
-  <!-- 有列表的时候 -->
+  <!-- 有考勤的时候 -->
   <block wx:if="{{1==1}}">
-    <!-- 个人工资 -->
+    <!-- 个人考勤 -->
     <view wx:if="{{headerBorder}}" class='content bg_fff'> 
       <view bindtap='perDetails' class='com_width list_box'>
         <view class='list'>
-          <text class='list_title'>姓名：</text>
-          <text class='list_data'></text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>项目名称：</text>
-          <text class='list_data'></text>
+          <text class='list_title'>项目名称:</text>
+          <text class='list_data'>北京三环新城项目</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>劳务公司：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>北京三环新城项目有限公司</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>班组：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>某某某</text>
+        </view>
+
+        <view class='list'>
+          <text class='list_title'>姓名：</text>
+          <text class='list_data'>某某某</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>年月：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>2019年2月</text>
         </view>
 
         <view class='list'>
-          <text class='list_title'>应发工资：</text>
-          <text class='list_data'></text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>扣款：</text>
-          <text class='list_data'></text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>实发工资：</text>
-          <text class='list_data'></text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>本次发放：</text>
-          <text class='list_data'></text>
+          <text class='list_title'>班数：</text>
+          <text class='list_data'>80个</text>
         </view>
       </view>
-      <view bindtap='confirmationTap' class='com_width confirmation'>确认</view>
+
+      <view bindtap='confirmationTap' class='bg_blue com_footer_btn'>确认</view>
     </view>
-    <!-- 班组工资 -->
+    <!-- 班组考勤 -->
     <view wx:else class='content bg_fff'> 
       <view bindtap='classDetails' class='com_width list_box'>
         <view class='list'>
-          <text class='list_title'>项目名称：</text>
-          <text class='list_data'></text>
+          <text class='list_title'>项目名称:</text>
+          <text class='list_data'>北京三环新城项目</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>劳务公司：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>北京三环新城项目有限公司</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>班组：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>某某某</text>
         </view>
 
         <view class='list'>
           <text class='list_title'>年月：</text>
-          <text class='list_data'></text>
+          <text class='list_data'>2019年2月</text>
         </view>
 
         <view class='list'>
-          <text class='list_title'>应发工资：</text>
-          <text class='list_data'></text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>扣款：</text>
-          <text class='list_data'></text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>实发工资：</text>
-          <text class='list_data'></text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>本次发放：</text>
-          <text class='list_data'></text>
+          <text class='list_title'>班数：</text>
+          <text class='list_data'>80个</text>
         </view>
       </view>
-      <view bindtap='confirmationTap' class='com_width confirmation'>确认</view>
+
+      <view bindtap='confirmationTap' class='bg_blue com_footer_btn'>确认</view>
     </view>
   </block>
-  <!-- 无工资列表的时候 -->
+ 
+  <!-- 没有list的时候 -->
   <view wx:else class='list_none'>
     <view>没有列表的时候</view>
     <image src="/image/none_record.png"></image>
