--- a/page/tabBar/messagePages/ggDetails/ggDetails.wxml
+++ b/page/tabBar/messagePages/ggDetails/ggDetails.wxml
@@ -4,6 +4,6 @@
     <text class='color_gray'>2018-04-02  maxos</text>
   </view>
   <view class='content bg_fff'>
-    
+    富文本
   </view>
 </view>
