--- a/page/tabBar/mine/mine.wxml
+++ b/page/tabBar/mine/mine.wxml
@@ -1,101 +1,103 @@
-<view wx:if="{{!blockIsShow}}" class='box'>
-  <!-- header -->
-  <view class='border_top bg_fff box_shadow'>
-    <view class='display_flex com_width headers'>
-      <image src='/image/none_record.png'></image>
-      <view>
-        <view class='user_name'>木木</view>
-        <!-- <view class='user_msg display_flex'>
-          <text class='color_gray'>当前所在项目：</text>
-          <text>某个项目</text>
-          <view class='add_class tab_btn'>切换</view>
-        </view> -->
-        <view class='user_msg display_flex'>
-          <icon type='success' size='14'></icon>
-          <text class='color_gray'>已实名认证 ></text>
+
+
+  <view wx:if="{{!blockIsShow}}" class='box'>
+      <!-- header -->
+      <view bindtap='photoTap' class='border_top bg_fff box_shadow'>
+        <view class='display_flex com_width headers'>
+          <image src='/image/none_record.png'></image>
+          <view>
+            <view class='user_name'>{{mineData.realName}}</view>
+            <!-- <view class='user_msg display_flex'>
+              <text class='color_gray'>当前所在项目：</text>
+              <text>某个项目</text>
+              <view class='add_class tab_btn'>切换</view>
+            </view> -->
+            <view wx:if="{{mineData.isAuth == 1}}" class='user_msg display_flex'>
+              <icon type='success' size='14'></icon>
+              <text class='color_gray'>已实名认证 ></text>
+            </view>
+          </view>
+        </view>
+      
+      </view>
+      <!-- 实名认证 -->
+      <view class='bg_fff margin_top' bindtap='goAuthentication'>
+      
+        <view class='display_flex com_list certification'>
+          <view class='icon_box'>
+            <text class='fa com_icon color_blue fa-address-card-o'></text>
+          </view>
+        
+          <view class='com_list_right display_flex border_none'>
+            <text>实名认证</text>
+            <view class='color_red'>为了确保正常使用，赶快实名认证</view>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
         </view>
       </view>
-    </view>
-   
+      <!-- list -->
+      <view class='bg_fff margin_top '>  
+        <view class='display_flex com_list'>
+          <view class='icon_box'>
+            <text class='fa com_icon color_blue fa-address-card-o'></text>
+          </view>
+          <view class='com_list_right display_flex'>
+            <text>紧急联系人</text>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
+        </view>
+
+        <view class='display_flex com_list'>
+          <view class='icon_box'>
+            <text class='fa color_3 com_icon color_blue fa-balance-scale'></text>
+          </view>
+          <view class='com_list_right display_flex'>
+            <text>个人奖惩</text>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
+        </view>
+
+        <view class='display_flex com_list' bindtap='goMyProject'>
+          <view class='icon_box'>
+            <text class='fa color_4 com_icon color_blue fa-file-text-o'></text>
+          </view>
+          <view class='com_list_right display_flex'>
+            <text>我的项目</text>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
+        </view>
+
+        <view class='display_flex com_list' bindtap='goPersonData'>
+          <view class='icon_box'>
+            <text class='fa com_icon color_blue fa-address-book-o'></text>
+          </view>
+          <view class='com_list_right display_flex'>
+            <text>个人资料</text>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
+        </view>
+        <view class='display_flex com_list'>
+          <view class='icon_box'>
+            <text class='fa color_6 com_icon color_blue fa-handshake-o'></text>
+          </view>
+          <view class='com_list_right display_flex border_none'>
+            <text>信息反馈</text>
+            <text class='fa com_right fa-chevron-right'></text>
+          </view> 
+        </view>
+      </view>
+      <!-- 退出 -->
+      <view class='out bg_fff'>退出</view>
   </view>
-  <!-- 实名认证 -->
-  <view class='bg_fff margin_top' bindtap='goAuthentication'>
-   
-    <view class='display_flex com_list certification'>
-      <view class='icon_box'>
-        <text class='fa com_icon color_blue fa-address-card-o'></text>
+  <!-- 实名认证浮层 -->
+  <view wx:else class='box_block'>
+    <view class='bg_fff block_view'>
+      <view class='block_title'>您未实名认证！</view>
+      <view class="block_content color_gray">
+        只能看招聘信息,点击进行<text class='add_class'>实名认证></text>
       </view>
-    
-      <view class='com_list_right display_flex border_none'>
-        <text>实名认证</text>
-        <view class='color_red'>为了确保正常使用，赶快实名认证</view>
-        <text class='fa com_right fa-chevron-right'></text>
-      </view> 
-    </view>
-  </view>
-  <!-- list -->
-  <view class='bg_fff margin_top '>  
-    <view class='display_flex com_list'>
-      <view class='icon_box'>
-        <text class='fa com_icon color_blue fa-address-card-o'></text>
-      </view>
-      <view class='com_list_right display_flex'>
-        <text>紧急联系人</text>
-        <text class='fa com_right fa-chevron-right'></text>
-      </view> 
-    </view>
-
-    <view class='display_flex com_list'>
-      <view class='icon_box'>
-        <text class='fa color_3 com_icon color_blue fa-balance-scale'></text>
-      </view>
-      <view class='com_list_right display_flex'>
-        <text>个人奖惩</text>
-        <text class='fa com_right fa-chevron-right'></text>
-      </view> 
-    </view>
-
-    <view class='display_flex com_list' bindtap='goMyProject'>
-      <view class='icon_box'>
-        <text class='fa color_4 com_icon color_blue fa-file-text-o'></text>
-      </view>
-      <view class='com_list_right display_flex'>
-        <text>我的项目</text>
-        <text class='fa com_right fa-chevron-right'></text>
-      </view> 
-    </view>
-
-    <view class='display_flex com_list' bindtap='goPersonData'>
-      <view class='icon_box'>
-        <text class='fa com_icon color_blue fa-address-book-o'></text>
-      </view>
-      <view class='com_list_right display_flex'>
-        <text>个人资料</text>
-        <text class='fa com_right fa-chevron-right'></text>
-      </view> 
-    </view>
-    <view class='display_flex com_list'>
-      <view class='icon_box'>
-        <text class='fa color_6 com_icon color_blue fa-handshake-o'></text>
-      </view>
-      <view class='com_list_right display_flex border_none'>
-        <text>信息反馈</text>
-        <text class='fa com_right fa-chevron-right'></text>
-      </view> 
+      <view class='later_on add_class'>稍后认证</view> 
     </view>
   </view>
-  <!-- 退出 -->
-  <view class='out bg_fff'>退出</view>
-</view>
 
-<!-- 实名认证浮层 -->
-<view wx:else class='box_block'>
-  <view class='bg_fff block_view'>
-    <view class='block_title'>您未实名认证！</view>
-    <view class="block_content color_gray">
-      只能看招聘信息,点击进行<text class='add_class'>实名认证></text>
-    </view>
-    <view class='later_on add_class'>稍后认证</view> 
-  </view>
-</view>
   
