--- a/page/tabBar/minePages/authentication/authentication.wxss
+++ b/page/tabBar/minePages/authentication/authentication.wxss
@@ -36,10 +36,14 @@
   justify-content:center;
   font-size: 26rpx;
 }
-.add_view image{
+.add_view .icon{
   width: 60rpx;
   height: 60rpx;
   margin-bottom: 8rpx;
+}
+.add_view .photo{
+  width: 100%;
+  height: 100%;
 }
 .z_msg{
   font-size: 20rpx;
